<?xml version="1.0"?>
<package>
  <name>flosdrone</name>
  <version>1.0.0</version>
  <description>The flosdrone package</description>

  <maintainer email="ansse.saarimaki@gmail.com">Ansse Saarimäki</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/ansse/flosdrone</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
